engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_runtime_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort


› 1. GPT-6.1 Sol (Global) (current)    Latest workhorse model for coding and everyday work.
  2. GPT-6-Astra (Global)              Frontier intelligence for the most demanding work.
  3. GPT-6 Sol (Global)                Previous generation workhorse model.
  4. GPT-6 Luna (Global)               Fast and affordable model for easier tasks.
  5. GPT-5.6 Sol (Global)              Older generation workhorse model.
  6. GPT-5.6 Terra (Global)            Older balanced model for straightforward work.
  7. GPT-5.6 Luna (Global)             Older fast and efficient model.
  8. GPT-6.1 Sol (US cross-region)     Latest workhorse model for coding and everyday work.
↓
  enter select · esc back
